p2/confs/app2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2-deployment
  labels:
    app: app2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app2-pod
  template:
    metadata:
      labels:
        app: app2-pod
    spec:
      containers:
        - name: app2-container
          image: paulbouwer/hello-kubernetes:1.10
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: app2-service
  labels:
    app: app2
spec:
  selector:
    app: app2-pod
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
