p2/confs/app3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app3-deployment
  labels:
    app: app3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app3-pod
  template:
    metadata:
      labels:
        app: app3-pod
    spec:
      containers:
        - name: app3-container
          image: paulbouwer/hello-kubernetes:1.10
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: app3-service
  labels:
    app: app3
spec:
  selector:
    app: app3-pod
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
